--- a/README
+++ b/README
@@ -1,18 +1,31 @@
-given <YOUR-PROJECT>
+given YOUR-PROJECT
 
-A)PYTHON: used to insert 200 docs of 3800 chars in "shared_index"
+I have used two versions:
 
-	1) deploy python python-docs-insertion
-	2) visit python-docs-insertion.<YOUR-PROJECT>.appspot.com/search/insert to insert 
-		2.1) you can delete all docs with python-docs-insertion.<YOUR-PROJECT>.appspot.com/search/clear
+A) PYTHON: only to insert 200 docs of 3800 chars in Index "1001_Nights"
 
-B) JAVA: used to insert 200 docs of 3800 chars in "shared_index"
+	1) app.yaml  :  set application: YOUR-PROJECT
+	
+	2) deploy python-docs-insertion executing the following command from within python-docs-insertion folder:
+		"appcfg.py update ."
+	
+	3) then insert 200 docs of 3800 chars into "1001_Nights" Index visiting:
+		
+		http:// python-docs-insertion.YOUR-PROJECT.appspot.com/search/insert 
+		
+		3.1) you can clear this index visiting:
+			http://python-docs-insertion.YOUR-PROJECT.appspot.com/search/clear
+
+B) JAVA: 
 	
 	1) java-search/pom.xml  :  set <my.cloud.sdk.folder> 
-	2) java-search/src/main/webapp/WEB-INF/appengine-web.xml : set <application>
+	
+	2) java-search/src/main/webapp/WEB-INF/appengine-web.xml : set <application> to YOUR-PROJECT
 
-	3) deploy java search with: mvn gcloud:deploy from within java-search
+	3) deploy java-search executing the following command from within java-search folder:
+		"mvn gcloud:deploy"
 
 	4) two ways to do search:
-		4.1) java-search.<YOUR-PROJECT>.appspot.com/user trying to mimic user's code
-		4.2) java-search.<YOUR-PROJECT>.appspot.com/asbadaspossible to try to make it as slow as reported
+		4.1) java-search.YOUR-PROJECT.appspot.com/user trying to mimic user's code
+		4.2) java-search.YOUR-PROJECT.appspot.com/asbadaspossible to try to make it as slow as he reports
+
